--- a/Clio_Final_Project.Rmd
+++ b/Clio_Final_Project.Rmd
@@ -110,7 +110,7 @@ The average family size was in fact around three to four people, indicating that
 
 The economic motive was an important influence on the decision to immigrate. It was the hope of improving their material welfare which induced many Germans to direct their footsteps toward North America. They desired to escape the heavy taxation in their own country and hoped to get cheap land and higher wages in America. Texas interested both those who were no longer satisfied to endure the social conditions in Germany and those who saw immigration as a means of improving these conditions at home. Those who could no longer make a satisfactory living in Europe felt that in Texas they could acquire economic independence, while merchants and manufacturers saw the opportunity of opening up new markets for the expansion of German business. The duality of these conditions clearly appealed to a wide sector of the population.
 
-```{r, echo=FALSE, fig.cap="The graph shows that the majority of immigrants who listed an occupation were artisans."}
+```{r, echo=FALSE, fig.cap="The graph shows that the majority of people who listed an occupation on their immigration record were skilled artisans."}
 
 occupation_category <- read_csv("occupation_category.csv")
 
@@ -134,7 +134,7 @@ filter(!is.na(category)) %>%
   theme_minimal()+
   theme(legend.position = "none")+
   labs(title = "Occupation of German Immigrants to Texas",
-       subtitle = "By Category",
+       subtitle = "By Category, 1844-1850",
        y = "Number of People",
        x= "Occupation Type")
   
@@ -144,19 +144,19 @@ Though not every immigration record listed an occupation, of those who did, the 
 
 <h3 align="center">Were early colonization efforts successful?</h3>
 
-In December of 1844, three shiploads of Germans arrived in Galveston and proceeded down the coast to Matagorda Bay. A warehouse and other facilities had been erected ahead of their arrival, but there were no living accommodations for the hundreds of newly arrived immigrants who were forced to camp on the open beach in winter weather.^[Lich, 31.] It was not until March of 1845 that the first large German town, New Braunfels, would be established by the Comal River. Despite rampant disease and death, New Braunfels grew steadily, in part due to the hardworking farmers and craftsmen that made of the majority of Adelsverein immigrants.
+In December of 1844, three shiploads of Germans arrived in Galveston and proceeded down the coast to Matagorda Bay. A warehouse and other facilities had been erected ahead of their arrival, but there were no living accommodations for the hundreds of newly arrived immigrants who were forced to camp on the open beach in winter weather.^[Lich, 31.] It was not until March of 1845 that the first large German town, New Braunfels, would be established by the Comal River. Despite rampant disease and death, New Braunfels grew steadily, in part due to the hardworking farmers and craftsmen that made up the majority of Adelsverein immigrants.
 
 Another success story was the town of Fredericksburg. A wagon train left New Braunfels on April 23, 1846, and settled in a spot in the northwest Hill Country of Texas, naming the land after Prince Frederick of Prussia. The leader of the group, John Meusebach, negotiated with the Comanche tribe to secure a treaty for more than three million acres of land beyond the San Saba River for German colonization and exploration. After the treaty was signed, Meusebach encouraged German families to settle the Hill Country as farmers and ranchers. Petitions were circulated for the organization of new counties around the German settlements. In 1846, the state legislature created Comal County with New Braunfels as the county seat, and in 1848 Fredericksburg became the seat of Gillespie County. By 1850, the German population of Fredericksburg approached 2,000.^[Lich, 34-7.]
 
 Though life in early German Texas settlements were difficult, many believed the struggle was a fair price to pay. Writing from Fredericksburg, Peter Birk enthusiastically advised his friends in the homeland to “leave Germany and come here where you can live happily… if you work only half as much as in Germany you can live without troubles."^[Letter from Peter Birk, January 15, 1850, in Irene Marschall King, *Comanches on the Peace-Path* (Waco: Texian, 1970), 135.]
 
-Even as Texas gained admission into the United States on December 29, 1845, German colonization companies still operated and even actively helped immigrants claim citizenship in their new land. However, by 1846, the work of the Adelsverein began to slow as many of the rich nobles who had supported the Texas project began to lose interest in their grandiose project of creating a model German state in the New World. Texas’ annexation into the United States halted their political influence and potential profits. However, the demise of the Adelsverein in no way slowed down German immigration to Texas; rather, the movement continued to gain impetus with each passing year, and only the Civil War brought it to a momentary standstill.^[Lich, 41.]
+Even as Texas gained admission into the United States on December 29, 1845, German colonization companies still operated and even actively helped immigrants claim citizenship in their new land. However, by 1846, the work of the Adelsverein began to slow as many of the rich nobles who had supported the Texas project began to lose interest in their grandiose idea of creating a model German state in the New World. Texas’ annexation into the United States halted their political influence and potential profits. However, the demise of the Adelsverein in no way slowed down German immigration to Texas; rather, the movement continued to gain impetus with each passing year, and only the Civil War brought it to a momentary standstill.^[Lich, 41.]
 
 <h3 align="center">Conclusion</h3>
 
 German colonization of Texas was clearly successful because of organized movements by elite groups like the Adelsverein. They succeeded in creating a utopic narrative of Texas life that perfectly resonated with a wide variety of disgruntled Germans, unsatisfied with their current life and inspired to immigrate to the New World. While Texas was not in reality always what these immigrants had pictured, the large majority seemed content to stay and strengthen the German enclaves being built around the state, attracting even more of their countrymen.
 
-While these early immigrants were not who the Adelsverein had hoped to attract to the Texas colonies, they were largely successful in establishing large settlements in the Brazos and Colorado valleys. They were land-owning families, artisans, and, in a few cases, university-educated professional people and intellectuals. The Germans were ambitious farmers and artisans who believed their futures were cramped by the social and economic system at home. They were not poverty-stricken and oppressed as often portrayed. The immigrants “brought their past with them,” trusting that in the new world “everything would take root… grow bigger and better than before, seekers pursuing a dream."^[Theodore Huebener, *The Germans in America* (Philadelphia: Chilton, 1962).] This dream became a reality, with much of Western Texas developed by German immigrants by the mid-nineteenth century.
+While these early immigrants were not who the Adelsverein had hoped to attract to the Texas colonies, they were largely successful in establishing large settlements in the Brazos and Colorado valleys. They were land-owning families, artisans, and, in a few cases, university-educated professional people and intellectuals. The Germans were ambitious farmers and artisans who believed their futures were cramped by the social and economic system at home and were not poverty-stricken and oppressed as often portrayed. The immigrants “brought their past with them,” trusting that in the new world “everything would take root… grow bigger and better than before, seekers pursuing a dream."^[Theodore Huebener, *The Germans in America* (Philadelphia: Chilton, 1962).] This dream became a reality, with much of Western Texas developed by German immigrants by the mid-nineteenth century.
 
 ## Acknowledgments {.appendix}
 
